Update scripts for release 3.6.3