@@ -8,14 +8,18 @@ if [ -n "$(apt-cache search azure-security)" ]; then
     apt-get purge -y azure-security
 fi
 
-service elasticsearch stop
+rm /opt/waf/conf/wsc/snapshots/default.sqlite3 || echo 'wsc snapshot does not exist'
+rm /opt/waf/conf/wsc/config.sqlite3 || echo 'wsc snapshot does not exist'
 
-/usr/lib/jvm/default-java/bin/java -Xms1429560k -Xmx1429560k -Djava.awt.headless=true -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=75 -XX:+UseCMSInitiatingOccupancyOnly -XX:+HeapDumpOnOutOfMemoryError -XX:+DisableExplicitGC -Dfile.encoding=UTF-8 -Delasticsearch -Des.pidfile=/var/run/elasticsearch/elasticsearch.pid -Des.path.home=/usr/share/elasticsearch -cp :/usr/share/elasticsearch/lib/elasticsearch-1.7.1.jar:/usr/share/elasticsearch/lib/*:/usr/share/elasticsearch/lib/sigar/* -Des.default.config=/etc/elasticsearch/elasticsearch.yml -Des.default.path.home=/usr/share/elasticsearch -Des.default.path.logs=/var/log/elasticsearch -Des.default.path.data=/var/lib/elasticsearch -Des.default.path.work=/tmp/elasticsearch -Des.default.path.conf=/etc/elasticsearch org.elasticsearch.bootstrap.Elasticsearch &
-PID=$!
+sed -i "s@LICENSE_SERVER_REST_API.*@LICENSE_SERVER_REST_API = 'https://ptaf-license.ptsecurity.com/api/v3'@g" \
+        /opt/waf/python/lib/python2.7/site-packages/ui/config.py
 
-sleep 20
-kill -9 $PID
 
+sed -i "s@/opt/waf/artifacts/.*@ @g" /etc/rc.local
+
+
+
+WSC_MGMT_INTERFACE=eth0 WSC_WAN_INTERFACE=eth0 WSC_LAN_INTERFACE=eth1 \
 /usr/local/bin/wsc -e <<EOF
 
 host add 127.0.1.1 $HOSTNAME
@@ -30,25 +34,11 @@ if mark lo:0
 
 feature set azure_byol true
 integration_mode reverse_proxy
-user activate apic
 
 config commit
 config sync
 
 EOF
-
-chmod +x ./ptaf_api_settings.py
-./ptaf_api_settings.py
-
-echo 'db.users.update({login: "apic"}, {$set: {active: "false"}})' \
-   | mongo waf -u root -p $(/usr/local/bin/wsc -c "password list") --authenticationDatabase admin
-
-sleep 20
-while [ $(ps aux | grep "/usr/bin/uwsgi --ini /usr/share/uwsgi/conf/default.ini --xmlconfig /etc/uwsgi/apps-enabled/ui.xml --daemonize /var/log/uwsgi/app/ui.log" | wc -l) -lt 5 ]nano; do
-    sleep 1
-done
-
-echo "ui service is up"
 
 if [ -n "${LICENSE}" ]; then
     curl -k "https://localhost:8443/license/get_config/?license_token=${LICENSE}" || exit 0
